work-box-alignment-fix

--- a/css/style.css
+++ b/css/style.css
@@ -360,7 +360,12 @@ main {
     padding: 1rem 2.2rem;
     border-radius: 3.5rem;
     border: 2px solid #33FFA9;
-    cursor: pointer; }
+    cursor: pointer;
+    transition: .5s ease; }
+    .hero__cta:hover {
+      background-color: #33FFA9;
+      color: #222;
+      transition: .5s ease; }
 
 h1 {
   font-size: clamp(50px, 8vw, 90px);
@@ -414,16 +419,22 @@ h1 {
         max-width: none; } }
   .about__description {
     color: #FEFEFE;
-    font-size: 20px;
-    line-height: 26px;
+    font-size: 16px;
+    line-height: 1.3rem;
     margin-bottom: 1rem;
     line-height: 30px; }
+    @media only screen and (min-width: 62.5em) {
+      .about__description {
+        font-size: 20px; } }
   .about__list {
     color: #33FFA9;
-    font-size: 20px;
+    font-size: 16px;
     line-height: 26px;
     margin-left: 2rem;
     list-style: square; }
+    @media only screen and (min-width: 62.5em) {
+      .about__list {
+        font-size: 20px; } }
 
 .work {
   margin: 0 auto;
@@ -444,7 +455,8 @@ h1 {
   flex-direction: column;
   gap: 20px;
   padding: 2.5rem;
-  margin: 0 2rem 3rem 2rem; }
+  margin: 0 2rem 3rem 2rem;
+  justify-content: space-between; }
   .work-box__title {
     color: #33FFA9;
     text-decoration: none;
@@ -456,7 +468,13 @@ h1 {
       color: #74ffc5; }
   .work-box__description {
     color: #FEFEFE;
-    font-size: 1rem; }
+    font-size: 1rem;
+    line-height: 25px; }
+  .work-box__bottom {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    gap: 15px; }
   .work-box__more {
     color: #33FFA9; }
     .work-box__more:link, .work-box__more:active, .work-box__more:focus {
@@ -466,7 +484,7 @@ h1 {
   .work-box__links-container {
     display: flex;
     align-items: center;
-    gap: 10px; }
+    gap: 20px; }
   .work-box__img {
     width: 25px;
     height: 25px;
@@ -475,7 +493,8 @@ h1 {
     display: flex;
     gap: 10px;
     font-size: 0.9rem;
-    color: #8D99AE; }
+    color: #8D99AE;
+    align-items: flex-end; }
 
 .footer {
   margin-bottom: 5rem; }
@@ -499,7 +518,12 @@ h1 {
     border-radius: 3.5rem;
     border: 2px solid #33FFA9;
     cursor: pointer;
-    margin: 1rem 0; }
+    margin: 1rem 0;
+    transition: .5s ease; }
+    .footer__button:hover {
+      background-color: #33FFA9;
+      color: #222;
+      transition: .5s ease; }
   .footer__copyright {
     color: #FEFEFE;
     font-size: 0.9rem;
