--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -36,6 +36,13 @@
         border-radius: 3.5rem;
         border: 2px solid $color-green;
         cursor: pointer;
+        transition: .5s ease;
+
+        &:hover {
+            background-color: $color-green;
+            color: #222;
+            transition: .5s ease;
+        }
         
     }
 }
