--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -1,30 +1,37 @@
 .work {
-    
+
     margin: 0 auto;
     margin-bottom: 5rem;
-    
+
     &__grid {
         display: block;
+
         @media only screen and (min-width: $bp-large) {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
             // border: 2px solid red;
             max-width: 1200px;
-          } 
-        
+        }
+
     }
 }
 
-.work-box{
+.work-box {
     border: 0px solid $color-manatee;
-    box-shadow: 0px 0px 0px 4px rgba(141,153,174,0.3);  
+    box-shadow: 0px 0px 0px 4px rgba(141, 153, 174, 0.3);
     border-radius: 25px;
     display: flex;
     flex-direction: column;
     gap: 20px;
     padding: 2.5rem;
     margin: 0 2rem 3rem 2rem;
+
+    justify-content: space-between;
+
     
+
+
+
 
     &__title {
         color: $color-green;
@@ -32,6 +39,7 @@
         font-size: 1.6rem;
         font-weight: 600;
 
+
         &:link,
         &:active,
         &:focus {
@@ -39,19 +47,31 @@
         }
 
         &:hover {
-            color:#74ffc5;
+            color: #74ffc5;
         }
-           
+
 
     }
 
     &__description {
         color: $color-white;
         font-size: 1rem;
+        line-height: 25px;
+
+    }
+
+    &__bottom {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        gap: 15px;
+        // border: 2px solid red;
+        
     }
 
     &__more {
         color: $color-green;
+
         &:link,
         &:active,
         &:focus {
@@ -59,7 +79,7 @@
         }
 
         &:hover {
-            color:#74ffc5;
+            color: #74ffc5;
         }
     }
 
@@ -67,8 +87,8 @@
         display: flex;
         // border: 2px solid hotpink;
         align-items: center;
-        gap: 10px;
-        
+        gap: 20px;
+
     }
 
     &__img {
@@ -82,5 +102,7 @@
         gap: 10px;
         font-size: 0.9rem;
         color: $color-manatee;
+        align-items: flex-end;
+
     }
 }
